교육/연구 메뉴를 오픈합니다.

--- a/config/_default/menus.yml
+++ b/config/_default/menus.yml
@@ -49,11 +49,31 @@ main:
   - name: 기록물 기증
     url: /archive/donate
     weight: 3
-    parent: 자료실         
+    parent: 자료실
+
+  - name: 교육/연구
+    url: /learning-and-research
+    weight: -80
+  - name: 온라인교육
+    url: /learning-and-research/e-learning
+    weight: 1
+    parent: 교육/연구   
+  - name: 프로그램
+    url: /learning-and-research/programs
+    weight: 2
+    parent: 교육/연구
+  - name: 교육자료
+    url: /learning-and-research/resources
+    weight: 3
+    parent: 교육/연구
+  - name: 연구자료
+    url: /learning-and-research/papers
+    weight: 4
+    parent: 교육/연구             
 
   - name: 소식/참여
     url: /connect
-    weight: -80
+    weight: -70
   - name: 공지사항
     url: /connect/notice
     weight: 1
@@ -73,7 +93,7 @@ main:
 
   - name: 박물관소개
     url: /about
-    weight: -70
+    weight: -60
   - name: 인사말
     url: /about/greetings
     weight: 1
