일어 연혁을 추가합니다. / 영문 오류를 수정합니다.

--- a/data/admission_guide.yml
+++ b/data/admission_guide.yml
@@ -131,7 +131,7 @@ ko:
             - 박물관 청소년 기자단 운영
           - date: "09."
             body:
-            - 특별전시 <수요일 12시> 
+            - 1,300차 수요시위 맞이 특별전시 <수요일, 12시> 
           - date: "10."
             body:
             - 평화기행 실시
@@ -328,13 +328,13 @@ ko:
             - 건물 리모델링 공사 착공식                                                                                                                                                                 
 en: 
   관람안내:
-    title: Information for Visitors
+    title: Visit
     개관일:
       title: Opening Hours
       body: Tue-Sat, 10am-6pm (*Admission closed at 5pm)
     휴관일:
       title: Closed
-      body: Sun-Mon, Holidays
+      body: Sun-Mon
     주소:
       title: Address
       body: 20 Worldcupbuk-ro 11-gil Mapo-gu Seoul
@@ -346,8 +346,8 @@ en:
       body:
       - 1. Due to COVID-19, the War and Women’s Human Rights Museum is accepting visitors on a reservation-only basis. (*You can only enter during the time slot you booked)
       - 2. You can make a reservation for 1-4 individuals per visit (*Group visits are not allowed)
-      - 3. The maximum number of visitors is limited to 9 people per hour (*first-come, first-serve basis)
-      - 4. Audio guide [Korean, English, Japanese] is provided (*Education programs and guided exhibit tours are not provided)
+      - 3. The maximum number of visitors is limited to 30 people per hour (*first-come, first-serve basis)
+      - 4. Audio guide [Korean, English, Japanese] is provided
     오시는길:
       지하철:
         title: Subway
@@ -394,7 +394,7 @@ en:
       - "SWIFT code: CZNBKRSEXXX"
 
   박물관소개:
-    title: Introductions
+    title: About us
     인사말:
       title: Welcome Message
       message: “Welcome to the War and Women’s Human Rights Museum.”
@@ -427,9 +427,9 @@ en:
          - body: 5. Foundation for remembrance and education of future generations
            image: "/images/mission-and-vision-005.jpg"
     연혁:
-      title: Timeline(번역)
+      title: Timeline
       전쟁과여성인권박물관연혁:
-        title: 1.전쟁과여성인권박물관 Timeline of(번역)
+        title: Timeline of the War and Women’s Human Rights Museum
         목록:
           - title: 2012
           - date: 05.05.
@@ -520,7 +520,7 @@ en:
             body:
             - "Special Exhibit Voice of August 14: Kim Hak-soon’s Testimony 30th Anniversary Commemorative Exhibition held"                     
       전쟁과여성인권박물관건립추진연혁:
-        title: 2. Timeline of the campaign to establish the War and Women’s Human Rights Museum
+        title: Timeline of the campaign to establish the War and Women’s Human Rights Museum
         목록:
           - title: 1994
           - date: "00."
@@ -678,7 +678,7 @@ en:
             - Remodeling started          
 jp: 
   관람안내:
-    title: 来館案内
+    title: 博物館のご利用案内
     개관일:
       title: 開館日
       body: 火-土、午前10時から午後6時まで  (*入館は閉館の1時間前まで)
@@ -697,9 +697,8 @@ jp:
       - 戦争と女性の人権博物館は新型コロナウィルスにより、事前予約制で運営しております。
         (* ご予約時に指定された時間帯のみ入場可能です。)
       - 1回あたりに予約可能な人数は最大4名様までとなります。（団体のご利用は受け付けておりません。）
-      - 各時間帯の観覧人数を9名までに制限しております。(*先着順締め切り)
+      - 各時間帯の観覧人数を30名までに制限しております。(*先着順締め切り)
       - 音声ガイド[韓国語、英語、日本語]提供
-        (*感染症対策のため教育や解説・説明は行っておりません。)
     오시는길:
       지하철:
         title: アクセス
@@ -743,7 +742,7 @@ jp:
       - "韓国口座：国民銀行 069101-04-194282 (名義：戦争と女性の人権博物館）"  
 
   박물관소개:
-    title: ごあいさつ
+    title: 博物館の紹介
     인사말:
       title: ごあいさつ
       body:
@@ -776,251 +775,250 @@ jp:
          - body: 5.未来世代の記憶・教育の場
            image: "/images/mission-and-vision-005.jpg"        
     연혁:
-      title: 연혁
+      title: 沿革
       전쟁과여성인권박물관연혁:
-        title: 1.전쟁과여성인권박물관 연혁
+        title: 戦争と女性の人権博物館 沿革
         목록:
           - title: 2012
           - date: 05.05.
             body:
-            - 전쟁과여성인권박물관 개관 기념 심포지엄      
+            - 戦争と女性の人権博物館、開館記念シンポジウム      
           - date: 05.05.
             body:
-            - 전쟁과여성인권박물관 개관       
+            - 同、開館      
           - date: 05.05.
             body:
-            - 전쟁과여성인권박물관 개관
+            - 同建設委員会、解散式
           - title: 2013
           - date: "01.16."
             body:
-            - 서울시에 박물관 등록     
+            - ソウル市に博物館登録    
           - date: "01.18."
             body:
-            - 한국사립박물관협회 가입       
+            - 韓国私立博物館協会に加盟       
           - date: "03.08."
             body:
-            - 3ㆍ8세계여성의날 기념 특별전시 <또 하나의 세계지도-어제와 같은 오늘> 개막식
+            - 3ㆍ8国際女性デー記念特別展示＜もう一つの世界地図－昨日のような今日＞開幕式
           - date: "05.05."
             body:
-            - 개관 1주년 기념식 및 어린이 날 특별행사 <할머니들의 이야기>, <그림이야기로 배우는 일본군‘위안부’>, <희망의 나비 날리기>, <평화놀이터(평화 읽기, 평화 쓰기, 평화 그리기, 평화 만들기)>            
+            - 開館1周年記念式・子どもの日特別イベント＜ハルモニたちの話＞、＜絵物語から学ぶ日本軍「慰安婦」＞、＜羽ばたけ、希望の蝶＞、＜平和遊びの場(平和を読む、平和を書く、平和を描く、平和をつくる)＞            
           - title: 2014
           - date: 07.24. - 08.15.
             body:
-            - "포토저널리스트 정은진 초청 특별전시 <콩고의 눈물 2014 : 끝나지 않은 전쟁, 마르지 않은 눈물>"   
+            - "チョン・ウンジンフォトジャーナリスト招待特別展示＜コンゴの涙2014：終わらぬ戦争、乾かぬ涙＞"   
           - date: 08.02. - 08.08.
             body:
-            -  <평화가 있는 골목> 벽화 그리기   
+            - ＜平和がある路地＞路地壁画を製作   
           - date: "08.11."
             body:
-            -  <평화가 있는 골목> 벽화 공개식
+            - ＜平和がある路地＞路地壁画の公開式
           - title: 2015
           - date: "05.23."
             body:
-            - 광복 70주년 기념 특별전시 <해방을 기다리는 여인들>
+            - 光復70周年記念特別展示＜解放を待つ女たち>
           - title: 2017
           - date: 03.29.
             body:            
-            - 김복동·길원옥 동상 제막식
+            - キム・ボクトン(金福童)・ キル・ウォノク(吉元玉)像、除幕式
           - date: 04. - 05.
             body:
-            - 박물관 개관 5주년 기념 벽화 그리기
+            - 開館5周年記念、壁画製作
           - date: 03. - 08.
             body:
-            - 박물관 청소년 기자단 운영
+            - 青少年記者団運営
           - date: "09."
             body:
-            - 특별전시 <수요일 12시> 
+            - 第1300回水曜デモ記念特別展示<水曜日、12時> 
           - date: "10."
             body:
-            - 평화기행 실시
+            - ピースツアー実施
           - date: "11."
             body:
-            - 한영일 평화맵 제작
-            - 한영일 박물관 도록 제작
+            - ピースマップ製作(韓・英・日),
+            - 博物館の図録製作(韓・英・日)
           - title: 2018
           - date: 07. - 10.
             body:
-            - 평화마을 만들기 동행 캠페인 <전쟁과여성인권박물관과 함께하는 문화예술프로그램>
+            - 平和のまちづくり同行キャンペーン＜戦争と女性の人権博物館と共にする文化芸術プログラム＞
           - date: "10."
             body:
-            - 평화기행 3회 실시
+            - ピースツアー実施(3回)
           - date: "10."
             body:
-            - 특별전시 <상하이, 위안소의 시작>                       
+            - 特別展示＜上海、慰安所の始まり＞[KH4]                      
           - title: 2019
           - date: "05."
             body:
-            - 여성운동가 김복동 추모와 기억전
+            - 女性運動家キム・ボクトン(金福童)追悼と記憶展
           - date: "10."
             body: 
-            - 김순옥, 지돌이, 이수단, 이광자 추모전 <그곳에 내가, 우리가 있었다>
+            - キム・スノク(金順玉)、 チ・ドリ(池乭伊)、イ・スダン、イ・クァンジャ(李光子) 追悼展<そこに私が、私たちがいた＞
           - title: 2020           
           - date: "05."
             body:
-            - 수요시위 아카이브 오픈
+            - 「水曜デモ」アーカイブ、オープン
           - date: "08."
             body:
-            - 일본군'위안부'피해생존자 유품전 <새로운 시작, 길을 찾아가는 여정>
+            - 日本軍「慰安婦」被害者[KH6] 遺品展＜新たな始まり、道を探し求める旅路＞
           - date: "10."
             body:
-            - 한국정신대문제대책협의회 창설 30주년 기념 특별전시 <길위에서의 30년, 결국은 희망이더라> 
+            - 韓国挺身隊問題対策協議会創立30周年記念特別展示＜路上での30年、結局は希望だった＞ 
           - title: 2021
           - date: 08.17. - 2022. 01.22.
             body:
-            - 김학순 공개증언 30주년 기념 특별전시 <그날의 목소리>                      
+            - キム・ハクスン(金学順)公開証言30周年記念特別展示＜あの日の声＞                      
       전쟁과여성인권박물관건립추진연혁:
-        title: 2.전쟁과여성인권박물관 건립 추진연혁
+        title: 戦争と女性の人権博物館 建設推進の沿革
         목록:
           - title: 1994
           - date: "00."
             body:
-            - "'여성과 전쟁' 사료관 건립준비위원회 발족"
+            - "「女性と戦争」史料館建設準備委員会、発足"
           - title: 1999
           - date: "02."
             body:
-            - "서대문 한국정신대문제대책협의회 사무실 내 전시 및 교육을 위한 교육관 개관"
+            - "西大門(ソデムン)区所在の韓国挺身隊問題対策協議会事務所内に展示・教育空間として教育館をオープン"
           - title: 2003
           - date: "12.18."
             body:
-            - "'일본군'위안부'피해자를 진정으로 추모하는 일은 그들의 고통을 잊지 않고, 다시는 이런 일이 일어나지 않도록 교육하고 활동하는 것'이라는 취지 아래 돌아가신 할머니들을 위한 추모회 및 전쟁과여성인권박물관 건립을 위한 점화식(일본군'위안부'피해자 길원옥, 김분선, 김은례, 백넙데기, 신현순, 이금순, 이용수, 장점돌, 하상숙, 최갑순, 박두리, 황순이, 김상희, 이순덕, 이옥금, 한도순의 박물관 주춧돌기금 후원)"                          
+            - "「日本軍『慰安婦』被害者への真の追悼は、彼女たちの被った苦痛を忘れず、二度と同じようなことが起きないように教育し活動すること」という趣旨の下、亡くなったハルモニたちの追悼会、「戦争と女性の人権博物館」建設に向けたキャンドル点火セレモニーを開催。日本軍「慰安婦」被害生存者のキル・ウォノク(吉元玉)、キム・ボクトン(金福童)、キム・ブンソン(金粉先)、キム・ウンレ(金殷禮)、ペク・ノプテギ(白ノプテギ)、 シン・ヒョンスン(申絃順)、イ・グムスン、イ・ヨンス(李容洙)、チャン・ジョムドル(張点乭)、ハ・サンスク(河床淑)、チェ・ガプスン(崔甲順)、パク・トゥリ(朴頭理)、ファン・スニ(黃順伊)、キム・サンヒ(金相喜)、イ・スンドク(李順徳)、イ・オックム(李玉今)、ハン・ドスン(韓道順) より博物館礎石基金の寄付）"                          
           - title: 2004
           - date: "10.22."
             body:
-            - "국회 통일외교통상위원회의 외교통상위원회 국정감사에 길원옥할머니가 증인으로 출석"
-            - 통일외교통상위원회 소속 국회의원 전원 만장일치로 일본군‘위안부’ 피해자의 명예와 인권회복을 위한 역사관 건립을 위한 결의안 채택, 국회 본회에 상정, 결의안 채택
+            - "国会統一外交通商委員会の国政監査にキル・ウォノク (吉元玉)さんが証人として出席。"
+            - 統一外交通商委員会に所属する国会議員全員の満場一致により、日本軍「慰安婦」被害者の名誉と人権回復のための歴史館建設に関する決議案を採択の上、国会本会議に上程、決議として採択
           - date: 12.16.
             body:
-            - 건립위원회 발족식 개최(공동건립위원장단, 공동건립추진위원장단 추대)
-            - 홍보인쇄물․영상물 제작․공식 모금활동 시작
+            - 建設委員会の発足式を開催(共同建設委員長団、共同建設推進委員長団を推戴)
+            - 広報印刷物や映像の製作、募金活動を開始
           - date: 12.27.
             body:
-            - 제1차 공동건립추진위원장단 회의(박물관 부지마련 대책 본격 논의시작)
+            - 第1回共同建設推進委員長団会議(博物館の敷地確保に向けた議論の本格的開始)
           - title: 2005
           - date: "01." 
             body:
-            - 박물관 부지 마련 활동 시작(서울시 내 공원부지, 서울시 및 중앙정부 소유 건물 중 박물관으로 리모델링 가능한 건물 탐색)
+            - 博物館の敷地確保に向けた活動を開始(ソウル市内の公演敷地、ソウル市および国の所有する建物で博物館として改築可能な建物候補を探索)
           - date: 05.27.
             body:
-            - 국회 여성위원회 간담회
+            - 国会女性委員会との懇談会
           - date: "06." 
             body:
-            - 한국여자프로농구 경기에서 박물관 건립기금 마련을 위한 캠페인 진행
+            - 韓国女子プロバスケットボール競技大会で、博物館建設基金募金のためのキャンペーンを実施
           - date: "08."
             body:
-            - 서울시에 박물관 부지 기부 요청
+            - ソウル市に対し、博物館敷地の寄付を要請
           - date: "10."
             body:
-            - 서울시, 서대문독립공원 주차장 자리를 박물관 부지로 추진하는 문제 본격 논의 
+            - ソウル市、 西大門(ソデムン)独立公園の駐車場空間を博物館の敷地とする案を本格的に議論 
           - date: 10.21.
             body:
-            - 서대문독립공원 주차장 자리가 문화재에 포함되어 있는 사실 확인
+            - 上記空間が文化財に含まれている事実を確認
           - date: 10.25.
             body:
-            - 서대문독립공원 매점 부지에 박물관 건립하는 것으로 서울시와 합의
-            - 이명주 공동건립추진위원장(명지대학교 건축학과), 김희옥 
-            - 공동건립추진위원장(에이텍종합건축사사무소 소장) 건축설계 진행                                                                                    
+            - 西大門独立公園の売店敷地に博物館を建設することで、ソウル市と合意
+            - イ・ミョンジュ共同建設推進委員長(明知大学建築学科)、キム・ヒオク共同建設推進委員長(エイテック総合建築士事務所所長)、建築設計を進行                                                                                  
           - title: 2006
           - date: 03.08.
             body:
-            - 서대문독립공원 매점 부지에 박물관을 건립하는 문제와 관련 현상변경 허가신청서 서대문구청에 제출
+            - 西大門独立公園の売店敷地への博物館建設に向け、現状変更許可申請書を西大門区役所に提出
           - date: 04.14.
             body:
-            - 문화재청 사적과 현상변경심의위원회에서 전쟁 여성인권박물관 건립 허가
+            - 文化財庁史跡課の現状変更審議委員会において、戦争と女性の人権博物館の建設を許可
           - date: 06.12.
             body:
-            - 서울시 도시공원위원회 공원조성계획변경심의를 받기 위해 남산공원관리사업소에 심의안건 제출 
+            - ソウル市都市公園委員会の公園造成計画変更審議を受けるために、南山公園管理事業所に審議案件を提出 
           - date: 07.18.
             body:
-            - 서울시도시공원위원회 심의 통과
+            - ソウル市都市公園委員会の審議、通過
           - date: 08.18.
             body:
-            - 소위원회 2차 회의 심의 통과(최종 허가)
+            - 小委員会第2回会議での審議、通過(最終許可)
           - date: 09.21.
             body:
-            - 박물관 건립 설명회를 위한 국회의원 조찬간담회
+            - 博物館建設説明会のための国会議員朝食懇談会
           - date: 10.19.
             body: 
-            - 전쟁과 여성인권박물관 부지 확정 및 건립 설명회 (국가인권위원회 배움터)
+            - 戦争と女性の人権博物館の敷地確定・建設に関する説明会(国家人権委員会・学びの場にて）
           - date: "11."
             body: 
-            - 국회 여성가족위원회 예결산소위원회 개최, 박물관 예산논의, 2007년 예산에 올림            
+            - 国会女性家族委員会の予算決算小委員会開催、博物館の予算を議論、2007年度予算に計上
           - title: 2007
           - date: 01.12.
             body:
-            - 남산공원관리사업소에 사업시행 1년 연장 요청
+            - 南山公園管理事業所に事業施行の1年延長を要請
           - date: 01.24.
             body:
-            - <박물관 2007 시민모금 캠페인> 발대식
+            - 「博物館2007市民募金キャンペーン」立ち上げ式
           - date: 02.09.
             body:
-            - 한국정신대문제대책협의회 20개 회원단체장 명의로 여성가족부에 박물관 건립 예산 지원 요청 
+            - 韓国挺身隊問題対策協議会の20会員団体の代表者名義で女性家族部に対し、博物館建設予算支援を要請
           - date: "04.27. - 04.30."
             body:
-            - 박물관 건립 모금을 위한 오사카 집회
+            - 博物館建設募金のための大阪集会
           - date: 08.26.
             body:
-            - 나의 마음은 지지 않았다' 상영회 참석 및 박물관 홍보 활동(일본 동경)
+            - 映画「オレの心は負けてない」上映会に参加・博物館広報活動（日本東京）
           - title: 2008  
           - date: 03.28. - 03.30.
             body:
-            - 해외 박물관 네트워크 활동(베트남)
+            - 博物館の海外ネットワーク活動(ベトナム)
           - date: 04.07. - 04.09.
             body:
-            - 해외 박물관 네트워크 활동(대만)
+            - 博物館の海外ネットワーク活動(台湾)
           - date: 03.31.
             body:
-            - 박물관 홍보대사(농구선수 전주원) 위촉
+            - 博物館の広報大使を委嘱(バスケットボール選手チョン・ジュウォン)
           - date: 04.28.
             body:
-            - 문화재청, 현상변경심의 관련 신축 재허가(2008년 8월 15일에서 2011년 8월 15일까지로 신축허가 연장)
+            - 文化財庁、現状変更審議にかかる新築の再許可（2008年8月15日までと明記されていた新築許可期間を2011年8月15日まで延長）
           - date: 06.21.
             body:
-            - 전쟁과여성인권박물관 건립기금 마련을 위한 <이정미 콘서트, 이어지는 노래, 이어지는 춤, 이어지는 삶>(일본 오사카)
+            - 戦争と女性の人権博物館建設のためのチャリティコンサート開催（大阪、李政美「つながる歌、つながる舞、つながるいのち」）
           - date: 06.30. - 07.04.
             body:
-            - 해외 박물관 네트워크 활동(독일)
+            - 博物館の海外ネットワーク活動(ドイツ)
           - date: 07.31.
             body:
-            - 남산공원관리사업소에 도시계획시설사업 실시계획 인가 신청 서류 제출
+            - 南山公園管理事業所に都市計画施設事業実施計画の認可申請書類を提出
           - date: 08.16. 
             body:
-            - 호주 시드니에서 일본군'위안부' 할머니와 함께하는 호주친구들 주최 "박물관 후원의 밤" 개최
+            - 日本軍「慰安婦」ハルモニと共にするオーストラリアの友人たち主催「博物館後援の夕べ」開催(オーストラリア・シドニー)
           - date: 09.08.
             body:
-            - 남산공원관리사업소, 도시계획시설사업 실시계획 인가 신청에 따른 결과 통보
+            - 南山公園管理事業所、都市計画施設事業実施計画の認可申請に対する結果を通知
           - date: 10.16.
             body:
-            - 박물관 사업실시계획 인가 통보 및 인가증(건축허가) 교부
+            - 博物館の事業実施計画の認可を通知、認可証(建築許可)を交付
           - date: 10.17.
             body:
-            - 전쟁과여성인권박물관 건립을 위한 일본 동경 학습회
+            - 戦争と女性の人権博物館建設に関する学習会(日本東京)
           - date: 10.24. - 10.27.
             body:
-            - 해외 박물관 네트워크 활동(중국 상해, 무한)
+            - 博物館の海外ネットワーク活動(中国上海・武漢)
           - date: 11.03.
             body:
-            - 광복회 박물관 건축허가 철회를 위한 기자회견에 관한 정대협 입장 기자회견)
+            - 光復会が博物館建築許可の撤回を求めて開催した記者会見をめぐり、挺対協の立場を明らかにする記者会見
           - title: 2009 
           - date: 02.07.
             body:
-            - 전쟁과 여성인권박물관 일본 건설위원회 발족 집회
+            - 「戦争と女性の人権博物館」日本建設委員会、発足集会
           - date: 02.28.
             body:
-            - 전쟁과여성인권박물관 건립기금 마련을 위한 <이정미 콘서트>(일본 동경)
+            - 戦争と女性の人権博物館建設のための李政美チャリティコンサート開催(日本東京)
           - date: 03.08.
             body:
-            - 전쟁과여성인권박물관 착공식 <희망의 터 다지기>
+            - 戦争と女性の人権博物館、着工式「希望の地ならし」
           - date: 03.11. ~ 03.15.
             body:
-            - 서울메트로미술관 내 <전쟁과여성인권 국제전>
+            - ソウルメトロ美術館にて＜戦争と女性の人権国際展>
           - title: 2011
           - date: "02."
             body:
-            - 서대문독립공원 부지를 보류하고 기존의 건물을 매입해서 리모델링하기로 결의, (독립운동의 성지에 ‘위안부’ 박물관을 세울 수 없다며 광복회와 순국선열유족회 등 독립운동단체들의 공개적인 반대와 서을시의 미온적인 태도로 인해) 새로운 부지를 물색하기 시작
+            - 西大門独立公園内の敷地を見送り、既存の建物を買い取って改築する方針を決定(光復会や殉国鮮烈遺族会など独立運動団体が、独立運動の聖地に「慰安婦」博物館を建ててはならないと公然と反対し、ソウル市もこれに曖昧な対応を繰り返したため)。新たな敷地の物色を開始
           - date: "08."
             body:
-            - 성미산 자락의 2층 주택 매입 (서울시 마포구 성산동 39-13) 건축 설계 및 시공, 자료수집, 모금 활동 전개
+            - ソンミサン麓の2階建て住宅を買い取り(ソウル市麻浦区城山洞39-13)、建築設計・施行、資料の収集、募金活動を展開
           - title: 2012
           - date: 01.26.
             body:
-            - 건물 리모델링 공사 착공식
+            - 建物の改築工事、着工式
