--- a/data/admission_guide.yml
+++ b/data/admission_guide.yml
@@ -80,7 +80,7 @@ ko:
     연혁:
       title: 연혁
       전쟁과여성인권박물관연혁:
-        title: 1.전쟁과여성인권박물관 연혁
+        title: 전쟁과여성인권박물관 연혁
         목록:
           - title: 2012
           - date: 05.05.
@@ -171,7 +171,7 @@ ko:
             body:
             - 김학순 공개증언 30주년 기념 특별전시 <그날의 목소리>                      
       전쟁과여성인권박물관건립추진연혁:
-        title: 2.전쟁과여성인권박물관 건립 추진연혁
+        title: 전쟁과여성인권박물관 건립 추진연혁
         목록:
           - title: 1994
           - date: "00."
@@ -219,8 +219,7 @@ ko:
           - date: 10.25.
             body:
             - 서대문독립공원 매점 부지에 박물관 건립하는 것으로 서울시와 합의
-            - 이명주 공동건립추진위원장(명지대학교 건축학과), 김희옥 
-            - 공동건립추진위원장(에이텍종합건축사사무소 소장) 건축설계 진행                                                                                    
+            - 이명주 공동건립추진위원장(명지대학교 건축학과), 김희옥 공동건립추진위원장(에이텍종합건축사사무소 소장) 건축설계 진행                                                                                    
           - title: 2006
           - date: 03.08.
             body:
