테마 수정을 반영하고, 변경된 온라인 가이드 메세지를 반영합니다.

--- a/data/admission_guide.yml
+++ b/data/admission_guide.yml
@@ -363,17 +363,15 @@ en:
   온라인예약안내: 
     title: Online Reservation Information
     body_1:
-    - 1. Select the date you wish to visit on the calendar. The selected date will be shown in green. * If a date has not been selected, today’s date will be shown in green. 
-    - 2. Select the time you wish to visit. You can check the number of remaining tickets per time slot.  
-    - 3. Make sure you have chosen the correct date and time, and click the ‘Next Page’ button on the bottom of the page.
+    - 1. Select the date you wish to visit on the calendar. The selected date will be shown in green.
+    - "* If a date has not been selected, today’s date will be shown in green." 
+    - 2. Select the time you wish to visit. You can check the number of remaining tickets per time slot. 
+    - 3. Select the number of tickets you wish to reserve. You can adjust the quantity by clicking the ‘-’ and ‘+’ buttons on the left and right.
+    - "* You can check out the total fee on the bottom of the page."
     body_2:
-    - 1. Select the number of tickets you wish to reserve. You can adjust the quantity by clicking the ‘-’ and ‘+’ buttons on the left and right. * You can check out the total fee on the bottom of the page.
-    - 2. Fill in information of the person making the reservation. The name and contact information of the person making the reservation are required to book tickets.
-    - 3. Check the information regarding collection and provision of personal information.
-    - 4. Make sure the form is filled out correctly. Click the “Make a reservation” button on the bottom of the page.
-    body_3:
-    - 1. When the reservation is confirmed, you will see the following confirmation message. * If you turn on the ‘Notification’ button below, you can receive a push notification one day before your reserved date.  
-
+    - 1. Fill in information of the person making the reservation. The name and contact information of the person making the reservation are required to book tickets.
+    - 2. Check the information regarding collection and provision of personal information.
+    - 3. Make sure the form is filled out correctly. Click the “Make a reservation” button on the bottom of the page.
   예약관련문의: 
     title: Reservation Inquiry
     body: The online reservation page is currently available in Korean and English. Please refer to the guide to make reservations in Japanese. If you have any further questions regarding the reservations, please send us an email at 
@@ -723,9 +721,6 @@ jp:
     - 2. お申込み者の詳細情報を記入してください。お名前と連絡先は必須項目です。
     - 3. 予約のための個人情報収集・提供に関する案内文をご確認ください。
     - 4. ご記入の情報をもう一度ご確認の後、「予約する」のボタンを押してください。
-    body_3:
-    - 1. 予約が確定したら、画像のような案内メッセージが出てきます。
-      ＊案内メッセージの下にある通知の設定をONにすると、予約日の前日に案内の通知が表示されます。
 
   예약관련문의: 
     title: お問い合わせ 
