HUGO_ENV= "production" netlify 빌드 설정에 production을 추가합니다.

--- a/netlify.toml
+++ b/netlify.toml
@@ -4,6 +4,7 @@
 
 [build.environment]
   HUGO_VERSION = "0.92.0"
+  HUGO_ENV= "production"
 
 [functions]
   directory = "functions/gsheet"
@@ -15,3 +16,5 @@
   functionsPort = 8889
   port = 8888
   targetPort = 1313
+
+
