관람예약 주소를 네이버예약 주소로 교체합니다.

--- a/config/_default/params.yml
+++ b/config/_default/params.yml
@@ -17,7 +17,7 @@ featuredImages:
   - image1.png
   - image2.jpg
 
-bookingNaver: https://docs.google.com/forms/d/17Ao2Ly8M5YQT_dhy60_PXvN16XM6vohfoZn31lRvqeg/viewform?edit_requested=true
+bookingNaver: https://booking.naver.com/booking/6/bizes/596312
 
 footer:
   전화: 02-392-5252
