자원활동 폼 on/off editor preview를 제거합니다.

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -189,6 +189,8 @@ collections:
       - { label: '메인 공개', name: 'home_sticky', widget: 'boolean', default: false, hint: 'true 메인공개', required: false }      
   - name: 'volunteer'
     label: '자원활동신청'
+    editor:
+      preview: false
     files:
       - name: "volunteer"
         label: '자원활동신청 on/off'
