--- a/data/admission_guide.yml
+++ b/data/admission_guide.yml
@@ -120,7 +120,7 @@ ko:
         message: 
         - 기억과 기록
         - 연대와 계승
-        - 계승과 확장
+        - 소통과 확장
         목록:
          - body: 1. 기록의 체계적 수집과 보존
            image: "/images/mission-and-vision-001.jpg"
