미션비전 페이지 업데이트

--- a/data/admission_guide.yml
+++ b/data/admission_guide.yml
@@ -114,7 +114,9 @@ ko:
       title: "미션/비전"
       비전:
         title: 비전
-        body: 일본군성노예제 문제 및 해결 운동에 관한 기록과 기억의 국제 플랫폼
+        body: 
+        - 일본군성노예제 문제 및 해결 운동에 관한 
+        - 기록과 기억의 국제 플랫폼
       미션:
         title: 미션
         message: 
