관람 요금 표 영문 수정
기초수급자>
recipients under the National Basic Livelihood Security Act

--- a/data/admission_guide.yml
+++ b/data/admission_guide.yml
@@ -80,7 +80,7 @@ ko:
       장애인:
         title: People with disabilities
       수급자:
-        title: Dornor to the museum and the Korean Council
+        title: recipients under the National Basic Livelihood Security Act
       박물관기증자: 
         title: Dornor to the museum and the Korean Council              
   소식참여:
