박물관 후원계좌를 추가합니다.

--- a/data/admission_guide.yml
+++ b/data/admission_guide.yml
@@ -90,13 +90,14 @@ ko:
       buttonLabel: 정기후원
     일시후원신청하기:
       title: 일시후원 신청하기
-      body: 박물관 후원계좌| KB국민은행 069137-04-021905(전쟁과여성인권박물관), 신용카드·실시간계좌이체 등 편한 방식으로 후원하실 수 있습니다.
+      body: 박물관 후원계좌( KB국민은행 069137-04-021905 전쟁과여성인권박물관 ), 신용카드·실시간계좌이체 등 편한 방식으로 후원하실 수 있습니다.
       link: "https://online.mrm.or.kr/T5vJlVX"
       buttonLabel: 일시후원
     후원문의:
       title: 후원문의
       body:
-      - 박물관 후원계좌| KB국민은행 069137-04-021905(전쟁과여성인권박물관)
+      - 박물관 후원계좌
+      - KB국민은행 069137-04-021905(전쟁과여성인권박물관)
       - 후원에 대해 궁금한 사항은
       - 정의기억연대 운영관리국 070-4903-0528(직) / tax@womenandwar.net 로 문의해 주시기 바랍니다.
   박물관소개:
