연혁 최근순으로 변경

--- a/data/admission_guide.yml
+++ b/data/admission_guide.yml
@@ -140,43 +140,41 @@ ko:
       전쟁과여성인권박물관연혁:
         title: 전쟁과여성인권박물관 연혁
         목록:
-          - title: 2012
-          - date: 05.05.
+          - title: 2022
+          - date: 08.14.
             body:
-            - 전쟁과여성인권박물관 개관 기념 심포지엄      
-          - date: 05.05.
+            - 나비문화제 10주년
+          - title: 2021
+          - date: 08.17. - 2022. 01.22.
             body:
-            - 전쟁과여성인권박물관 개관       
-          - date: 06.05.
+            - 김학순 공개증언 30주년 기념 특별전시 <그날의 목소리>      
+          - title: 2020           
+          - date: "05."
             body:
-            - 박물관건립위원회 해단식
-          - title: 2013
-          - date: "01.16."
+            - 수요시위 아카이브 오픈
+          - date: "08."
             body:
-            - 서울시에 박물관 등록     
-          - date: "01.18."
+            - 일본군'위안부'피해생존자 유품전 <새로운 시작, 길을 찾아가는 여정>
+          - date: "10."
             body:
-            - 한국사립박물관협회 가입       
-          - date: "03.08."
+            - 한국정신대문제대책협의회 창설 30주년 기념 특별전시 <길위에서의 30년, 결국은 희망이더라> 
+          - title: 2019
+          - date: "05."
             body:
-            - 3ㆍ8세계여성의날 기념 특별전시 <또 하나의 세계지도-어제와 같은 오늘> 개막식
-          - date: "05.05."
+            - 여성운동가 김복동 추모와 기억전
+          - date: "10."
+            body: 
+            - 김순옥, 지돌이, 이수단, 이광자 추모전 <그곳에 내가, 우리가 있었다>
+          - title: 2018
+          - date: 07. - 10.
             body:
-            - 개관 1주년 기념식 및 어린이 날 특별행사 <할머니들의 이야기>, <그림이야기로 배우는 일본군‘위안부’>, <희망의 나비 날리기>, <평화놀이터(평화 읽기, 평화 쓰기, 평화 그리기, 평화 만들기)>            
-          - title: 2014
-          - date: 07.24. - 08.15.
+            - 평화마을 만들기 동행 캠페인 <전쟁과여성인권박물관과 함께하는 문화예술프로그램>
+          - date: "10."
             body:
-            - "포토저널리스트 정은진 초청 특별전시 <콩고의 눈물 2014 : 끝나지 않은 전쟁, 마르지 않은 눈물>"   
-          - date: 08.02. - 08.08.
+            - 평화기행 3회 실시
+          - date: "10."
             body:
-            -  <평화가 있는 골목> 벽화 그리기   
-          - date: "08.11."
-            body:
-            -  <평화가 있는 골목> 벽화 공개식
-          - title: 2015
-          - date: "05.23."
-            body:
-            - 광복 70주년 기념 특별전시 <해방을 기다리는 여인들>
+            - 특별전시 <상하이, 위안소의 시작>   
           - title: 2017
           - date: 03.29.
             body:            
@@ -197,37 +195,44 @@ ko:
             body:
             - 한영일 평화맵 제작
             - 한영일 박물관 도록 제작
-          - title: 2018
-          - date: 07. - 10.
+          - title: 2015
+          - date: "05.23."
             body:
-            - 평화마을 만들기 동행 캠페인 <전쟁과여성인권박물관과 함께하는 문화예술프로그램>
-          - date: "10."
+            - 광복 70주년 기념 특별전시 <해방을 기다리는 여인들>
+          - title: 2014
+          - date: 07.24. - 08.15.
             body:
-            - 평화기행 3회 실시
-          - date: "10."
+            - "포토저널리스트 정은진 초청 특별전시 <콩고의 눈물 2014 : 끝나지 않은 전쟁, 마르지 않은 눈물>"   
+          - date: 08.02. - 08.08.
             body:
-            - 특별전시 <상하이, 위안소의 시작>                       
-          - title: 2019
-          - date: "05."
+            -  <평화가 있는 골목> 벽화 그리기   
+          - date: "08.11."
             body:
-            - 여성운동가 김복동 추모와 기억전
-          - date: "10."
-            body: 
-            - 김순옥, 지돌이, 이수단, 이광자 추모전 <그곳에 내가, 우리가 있었다>
-          - title: 2020           
-          - date: "05."
+            -  <평화가 있는 골목> 벽화 공개식
+          - title: 2013
+          - date: "01.16."
             body:
-            - 수요시위 아카이브 오픈
-          - date: "08."
+            - 서울시에 박물관 등록     
+          - date: "01.18."
             body:
-            - 일본군'위안부'피해생존자 유품전 <새로운 시작, 길을 찾아가는 여정>
-          - date: "10."
+            - 한국사립박물관협회 가입       
+          - date: "03.08."
             body:
-            - 한국정신대문제대책협의회 창설 30주년 기념 특별전시 <길위에서의 30년, 결국은 희망이더라> 
-          - title: 2021
-          - date: 08.17. - 2022. 01.22.
+            - 3ㆍ8세계여성의날 기념 특별전시 <또 하나의 세계지도-어제와 같은 오늘> 개막식
+          - date: "05.05."
             body:
-            - 김학순 공개증언 30주년 기념 특별전시 <그날의 목소리>                      
+            - 개관 1주년 기념식 및 어린이 날 특별행사 <할머니들의 이야기>, <그림이야기로 배우는 일본군‘위안부’>, <희망의 나비 날리기>, <평화놀이터(평화 읽기, 평화 쓰기, 평화 그리기, 평화 만들기)>          
+          - title: 2012
+          - date: 05.05.
+            body:
+            - 전쟁과여성인권박물관 개관 기념 심포지엄      
+          - date: 05.05.
+            body:
+            - 전쟁과여성인권박물관 개관       
+          - date: 06.05.
+            body:
+            - 박물관건립위원회 해단식
+
       전쟁과여성인권박물관건립추진연혁:
         title: 전쟁과여성인권박물관 건립 추진연혁
         목록:
