--- a/data/admission_guide.yml
+++ b/data/admission_guide.yml
@@ -143,7 +143,10 @@ ko:
           - title: 2022
           - date: 08.14.
             body:
-            - 나비문화제 10주년
+            - 제 10차 세계일본군'위안부'기림일
+          - date: 05.05.
+            body:
+            - 개관 10주년 행사 <기록, 사람을 잇다>
           - title: 2021
           - date: 08.17. - 2022. 01.22.
             body:
