hugo version 0.104.3 & adjust wwm-theme

--- a/config/_default/params.yml
+++ b/config/_default/params.yml
@@ -4,7 +4,8 @@ title: 전쟁과여성인권박물관
 description: 일본군'위안부' 생존자들이 겪었던 역사를 기억하고 교육하는 공간
 images:
   - img/site-feature-image.png
-logo: images/logo-main.png
+logo: images/logo.png
+site: wwm
 
 license:
   title_of_work: 전쟁과여성인권박물관
